up doc, zoroaster

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test-all": "yarn-s test test-build",
     "test-watch": "yarn test -w",
     "lint": "eslint .",
-    "doc": "NODE_DEBUG=doc doc documentary -o README.md",
+    "doc": "NODE_DEBUG=doc doc documentary -o README.md -h1",
     "b": "alamode src -o build",
     "build": "yarn-s b doc",
     "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
@@ -35,9 +35,9 @@
   "homepage": "https://github.com/artdecocode/daily-log#readme",
   "devDependencies": {
     "alamode": "1.4.0",
-    "documentary": "1.11.0",
+    "documentary": "1.14.0",
     "eslint-config-artdeco": "1.0.1",
     "yarn-s": "1.1.0",
-    "zoroaster": "3.0.0"
+    "zoroaster": "3.0.3"
   }
 }
