--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test-watch": "yarn test -w",
     "lint": "eslint .",
     "doc": "NODE_DEBUG=doc doc documentary -o README.md -h1 -r",
+    "doc-archive-sep": "NODE_DEBUG=doc doc documentary-archive/2018/9 -o archive/2018/9.md -h1 -r",
     "b": "alamode src -o build",
     "build": "yarn-s b doc",
     "rec": "NODE_DEBUG=appshot appshot -T 23 -a Terminal -y 150 -f",
